k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mltru-com
  namespace: mltru-com
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mltru-com
  template:
    metadata:
      labels:
        app: mltru-com
    spec:
      imagePullSecrets:
        - name: registry-credentials
      containers:
        - name: web
          image: ghcr.io/micmnm/mltru-com:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: logs
              mountPath: /var/log/nginx
          resources:
            requests:
              memory: "32Mi"
              cpu: "10m"
            limits:
              memory: "64Mi"
              cpu: "50m"
      volumes:
        - name: logs
          emptyDir: {}
