k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mltru-com
  namespace: mltru-com
spec:
  selector:
    app: mltru-com
  ports:
    - port: 80
      targetPort: 80
